--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-   "name": "Spiddy - Fun New Tab",
+   "name": "Spidey Chrome Theme - Fun New Tab",
    "author": "Lets Find The shit...",
    "description": "A delightfully silly new tab experience.",
    "version": "0.0.0.1",
